Read a page's stock once instead of once per row
MaterialMapper filled the current stock and stock value from an @AfterMapping
hook that asked InventoryService for two aggregates keyed on the material id.
The generated mapper calls the hook once per mapped material, so the cost
followed the row count rather than the request, and nothing at the call site
showed it: a service mapping a page in a stream reads as free. A page of fifty
materials cost a hundred extra queries. IndentItemDto carries a full MaterialDto
and IndentItemMapper delegates to the same mapper, so a ten-line indent cost
twenty and a page of indents multiplied that again. StorageLocationMapper did
the same thing with a COUNT DISTINCT, once per location, on four listing paths.

hibernate.default_batch_fetch_size does not soften any of this. It batches lazy
association loads, and these were explicit repository calls it cannot see.

The stock and the counts are now read once for the whole set being converted and
handed to the mapper, which is the shape toWithStockDto always had: two grouped
queries on CurrentStock, one totalling quantity and value per material and one
counting distinct materials per location. A material or a location that holds
nothing produces no group, so the lookup supplies the zero the per-row
COALESCE(SUM(...), 0) used to return. The lookup travels as a MapStruct @Context,
so IndentItemMapper and IndentMapper pass the same instance down instead of each
mapper fetching its own, and DTO depth no longer multiplies query count.

Nothing about the responses changes. Diffing the generated mapper implementations
before and after, the only differences are the threaded parameter and where the
two stock fields and the item count come from; every DTO field is still set, from
the same source, in the same order.

Counted at the repository, per request:

  one material          2 -> 1
  page of 50 materials  100 -> 1
  ten-line indent       20 -> 1
  page of 50 locations  50 -> 1

MaterialMapperC